# LIDc

./: .gitmodules  CMakeLists.txt  README.md
LIDc/: __init__.py  liblid.py
include/: LIDException.hpp  config.hpp.in  dreamoutput.hpp  integrate.hpp  numpy.hpp  py.hpp
src/: CMakeLists.txt  Main.cpp  dreamoutput.cpp  integrate.cpp  py.cpp
